--- a/Geometry2/Geometry2.vcxproj
+++ b/Geometry2/Geometry2.vcxproj
@@ -60,6 +60,30 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="acp.cc" />
+    <ClCompile Include="arrange.C" />
+    <ClCompile Include="circle.C" />
+    <ClCompile Include="hull.C" />
+    <ClCompile Include="hullplot.C" />
+    <ClCompile Include="mindisk.C" />
+    <ClCompile Include="plot.C" />
+    <ClCompile Include="point.C" />
+    <ClCompile Include="ps2-nishida.C" />
+    <ClCompile Include="triangulate.C" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="acp.h" />
+    <ClInclude Include="arrange.h" />
+    <ClInclude Include="circle.h" />
+    <ClInclude Include="hull.h" />
+    <ClInclude Include="mindisk.h" />
+    <ClInclude Include="object.h" />
+    <ClInclude Include="plot.h" />
+    <ClInclude Include="point.h" />
+    <ClInclude Include="pv.h" />
+    <ClInclude Include="qd\qd_config.h" />
+    <ClInclude Include="qd\qd_inline.h" />
+    <ClInclude Include="triangulate.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
